[gd_scene load_steps=2 format=3 uid="uid://c7s3xrjnnoypl"]

[ext_resource type="Script" path="res://system/menu/save_load/profile_new.gd" id="1_i08bk"]

[node name="profile_new" type="PanelContainer"]
offset_right = 300.0
offset_bottom = 100.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_i08bk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "New Profile"

[node name="lbl_entry" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="btn_cancel" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Cancel"

[node name="btn_ok" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "OK"

[node name="lbl_error_msg" type="Label" parent="VBoxContainer"]
layout_mode = 2

[connection signal="button_down" from="VBoxContainer/HBoxContainer2/btn_cancel" to="." method="_on_btn_cancel_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer2/btn_ok" to="." method="_on_btn_ok_button_down"]
